trunk/Archive2/cb/6604b81083393f/output
clang version 3.5.0 (tags/RELEASE_350/final 217394)
Target: x86_64-unknown-linux-gnu
Thread model: posix
Test passed
g++ (GCC) 4.9.2
Copyright (C) 2014 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

main.cpp: In function 'char& foo(ref)':
main.cpp:4:15: error: invalid cast of an rvalue expression of type 'char' to type 'ref {aka char&}'
   return ref{x};
               ^
main.cpp: In instantiation of 'Tp bar(Us&& ...) [with Tp = char&; Us = {char&}]':
main.cpp:17:13:   required from here
main.cpp:10:36: error: invalid cast of an rvalue expression of type 'char' to type 'char&'
   return Tp{std::forward<Us>(us)...};
                                    ^
